compiler/testData/diagnostics/tests/redeclarations/MultiFilePackageRedeclaration.jet
// FILE: f.kt
package a
class <!REDECLARATION!>b<!> {}
// FILE: f.kt
package a.<!REDECLARATION!>b<!>
// FILE: f.kt
package a.<!REDECLARATION!>b<!>